<resources>
    <string name="app_name">Simple Dall-E</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="string_deny">Deny</string>
    <string name="string_accept">Accept</string>
    <string name="string_register">Register</string>
    <string name="string_okay">Okay</string>
    <string name="string_warning_api_empty">API key looks incorrect</string>
    <string name="string_api_key_incorrect">Your API key seems incorrect</string>
    <string name="string_your_api_key_here">Your API key here</string>
    <string name="string_open_ai_url"><a href="https://beta.openai.com/account/api-keys">https://beta.openai.com/account/api-keys</a></string>
    <string name="string_logo_generated_by_dall_e">Logo generated by DALL-E</string>
    <string name="string_home_page">Home Page</string>
    <string name="string_generate">Generate</string>
    <string name="string_history">History</string>
    <string name="string_generation_page">Generation Page</string>
    <string name="string_quality">Quality</string>
    <string name="string_number_of_images">Number of images</string>
    <string name="string_result">Result</string>
    <string name="string_notice">Notice</string>
    <string name="item_count">Item Count:</string>
</resources>