<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/string_home_page"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/generateBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/string_generate"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/historyBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/string_history"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>