<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeActivity">

    <TextView
        android:id="@+id/noticeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/string_notice"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noticeInfoTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/noticeTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/noticeTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/noticeTitleTextView"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"/>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/denyBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_deny"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/acceptBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/string_accept"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>